--- a/app/globals.css
+++ b/app/globals.css
@@ -35,15 +35,16 @@ html:not([data-scroll="0"]) .navbar {
 }
 
 .banner-image {
-  background-image: url('/assets/banner/background.png');
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: rgb(99, 102, 241);
+  color: #fff;
 }
 
 @media screen and (max-width: 640px) {
   .banner-image {
     background-image: none !important;
-    background-color: #FCF5EF;
+    background-color: rgb(99, 102, 241);
   }
 }
 
